--- a/src/index.css
+++ b/src/index.css
@@ -34,9 +34,13 @@ body {
 	bottom: 0;
 	background-image: url("/src/assets/prophetPicture2.jpg");
 	width: 100%;
-	height: 100%;
+	height: auto;
 	background-repeat: no-repeat;
 	z-index: -10;
+	/* translate: scale(1.7); */
+
+	/* background-size: contain; */
+	object-fit: cover;
 	background-size: cover;
 	background-position: top center;
 }
